unpackaged/main/default/objects/Price_List__c/Price_List__c.object-meta.xml
<CustomObject>
    <description>This Object represents the header level of an externally mastered pricing table, which applies item level discounts for a pre-defined list of products within specific Cost Zones.</description>
    <label>Price List</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Price List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>