unpackaged/main/default/objects/Price_List__c/fields/Cost_Zone__c.field-meta.xml
<CustomField>
    <fullName>Cost_Zone__c</fullName>
    <description>Unrestricted list of cost zones</description>
    <label>Cost Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AU CZ 1</fullName>
            </value>
            <value>
                <fullName>AU CZ 2</fullName>
            </value>
            <value>
                <fullName>AU CZ 3</fullName>
            </value>
            <value>
                <fullName>NZ CZ 1</fullName>
            </value>
            <value>
                <fullName>NZ CZ 2</fullName>
            </value>
            <value>
                <fullName>NZ CZ 3</fullName>
            </value>
            <value>
                <fullName>NZ CZ 4</fullName>
            </value>
            <value>
                <fullName>NZ CZ 5</fullName>
            </value>
            <value>
                <fullName>NZ CZ 6</fullName>
            </value>
            <value>
                <fullName>NZ CZ 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>