unpackaged/main/default/objects/Price_List__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the Price List purpose or currency</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>