unpackaged/main/default/objects/Price_List__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when Price List would end</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>