unpackaged/main/default/objects/Price_List__c/fields/Price_List_Definition__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price List Definition</description>
    <label>Price List Definition</label>
    <referenceTo>Price_List_Definition__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>