unpackaged/main/default/objects/Price_List__c/fields/Price_List_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Header_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID Reference for Price List</description>
    <externalId>true</externalId>
    <label>Price List Header ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>