unpackaged/main/default/objects/Price_List__c/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <description>Price List Names can be up to 100 chars</description>
    <label>Price List Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>