unpackaged/main/default/objects/Price_List__c/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <description>The Primary Segment of the Price List</description>
    <label>Primary Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>