unpackaged/main/default/objects/Price_List__c/fields/Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment__c</fullName>
    <description>The Secondary Segment of the Price List</description>
    <label>Secondary Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>