unpackaged/main/default/objects/Price_List__c/fields/Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>