unpackaged/main/default/objects/Price_List__c/fields/Spend_Band_Name__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_Name__c</fullName>
    <formula>Spend_Band__r.Name</formula>
    <label>Spend Band</label>
    <type>Text</type>
</CustomField>