unpackaged/main/default/objects/Price_List__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when Price List would start</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>