unpackaged/main/default/objects/Price_List__c/fields/Statex__c.field-meta.xml
<CustomField>
    <fullName>Statex__c</fullName>
    <description>Unrestricted list of Bunnings states</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NATIONAL</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>