unpackaged/main/default/objects/Price_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Price_List_Header_ID__c</columns>
    <columns>NAME</columns>
    <columns>Price_List_Name__c</columns>
    <columns>Spend_Band__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>